2017-10-28  Bruno Haible  <bruno@clisp.org>

	Don't assume that (truename (make-stream :output)) works on Windows.
	* makemake.in (check-script): Don't run unportable test on native
	Windows.

2017-10-28  Bruno Haible  <bruno@clisp.org>

	Fix 32-bit mingw build failure on 64-bit Cygwin.
	* configure.in: Determine WINDRES variable.
	* makemake.in (clispres.o): Use it.
	* src/configure, gllib/Makefile.in: Regenerated.

2017-10-28  Bruno Haible  <bruno@clisp.org>

	Use SINGLEMAP_MEMORY by default on most 64-bit platforms.
	* lispbibl.d: Revise decision whether to use SINGLEMAP_MEMORY: Ignore
	MMAP_FIXED_ADDRESS_HIGHEST_BIT (since the SINGLEMAP_* parameters handle
	this more precisely). Don't disable it on Linux/s390x (where it actually
	works). Don't disable it in MULTITHREAD mode.

2017-10-28  Bruno Haible  <bruno@clisp.org>

	Make SINGLEMAP_MEMORY work reliably on many platforms.
	* Makefile.devel (build-porting*-spvw_pure_blocks): Don't disable
	GENERATIONAL_GC when testing this configuration.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_*): Define separately for mips o32
	and mips n32.
	(SINGLEMAP_ADDRESS_BASE, SINGLEMAP_TYPE_MASK, SINGLEMAP_oint_type_shift,
	SINGLEMAP_garcol_bit_o, SINGLEMAP_oint_type_len,
	SINGLEMAP_oint_type_mask, SINGLEMAP_WORKS): Define appropriately for
	each known platform.
	(oint_type_*, oint_addr_*, oint_data_*) [SINGLEMAP_MEMORY]: Define based
	on these parameters.
	(TB7, ..., TB0) [SINGLEMAP_MEMORY]: Define based on garcol_bit_o and
	oint_type_mask.
	(garcol_bit_o): Don't redefine if already defined for SINGLEMAP_MEMORY.
	(SINGLEMAP_MEMORY_STACK): Define always when SINGLEMAP_MEMORY is
	defined.
	(pointable_address_unchecked) [SINGLEMAP_MEMORY]: Ignore
	addressbus_mask.
	(subr_tab_addr, symbol_tab_addr) [SINGLEMAP_MEMORY]: Consider
	SINGLEMAP_ADDRESS_BASE.
	* spvw.d (init_memory): When we don't need malloc()ed memory at all,
	don't call mymalloc.
	If SINGLEMAP_MEMORY && !IGNORE_MAPPABLE_ADDRESS_RANGE, verify that all